# shadi

./: .env.demo  .env.example  .gitignore  AGENTS.md  Dockerfile.api  README.md  config.py  docker-compose.vllm-base.yml  docker-compose.yml  pyproject.toml  skills-lock.json
.cursor/agents/: planner.md  reviewer.md  ui-engineer.md  worker.md
.cursor/rules/: shared-agent-tooling.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  prd-sync.yml
a2a/: debate.py  protocol.py
agents/: _llm.py  base.py  cli_output.py  meditron_model_ids.py  schemas.py  vllm_openai_ids.py
agents/evidence/: __init__.py  evidence_agent.py
agents/intake/: intake_agent.py
agents/orchestrator/: orchestrator.py
agents/safety/: veto_agent.py
agents/specialists/: _parse.py  cardiology_agent.py  image_agent.py  neurology_agent.py  pulmonology_agent.py  toxicology_agent.py
api/: config.py  db.py  deps.py  main.py
api/routes/: cases.py  fhir_routes.py  patients.py  reports.py
dashboard/: .env.example  .env.local.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
dashboard/src/: providers.tsx
docs/: PRD.md  cross-track-dependencies.md
docs/decisions/: adr-001-architecture.md  adr-002-model-assignments.md  adr-003-vllm-base-only-development.md  (+1 more)
fhir/: mcp_server.py  normalizer.py
scripts/: check_vllm_model_base.sh  create_api_track_prs.sh  run_tests.sh  sync_prd.py  verify_api_branch_tests.sh  verify_api_tracks_integration.sh  verify_lora_adapters.sh
shadi_fhir/: __init__.py  exceptions.py  intake_queue.py  mcp_server.py  normalizer.py  triage_bundle.py
tasks/: __init__.py  pipeline.py  worker.py
tests/: conftest.py
tools/: __init__.py  live_preflight.py  shadi_run_case_cli.py
(+54 files in other folders)
