[project]
name = "shadi"
version = "0.1.0"
description = "Multi-agent clinical diagnostic reasoning system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # FHIR
    "fhir.resources>=7.1.0",

    # LLM inference
    "vllm>=0.6.0",
    "transformers>=4.46.0",
    "accelerate>=1.1.0",
    "torch>=2.5.0",

    # Agent communication
    "httpx>=0.27.0",
    "anyio>=4.6.0",

    # Task queue / pub-sub
    "redis>=5.2.0",
    "arq>=0.26.0",

    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",

    # Clinical ontology / NLP
    "spacy>=3.8.0",
    "scispacy>=0.5.4",

    # Evidence corpus
    "biopython>=1.84",      # PubMed entrez API
    "rank-bm25>=0.2.2",     # BM25 retrieval over guidelines corpus

    # Observability
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",        # test client
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "fhir", "a2a", "models", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
